--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,15 @@
 			"error",
 			"tab"
 		],
+		"@typescript-eslint/indent": [
+			"error",
+			"tab"
+		],
 		"react/jsx-indent": [
+			2,
+			"tab"
+		],
+		"react/jsx-indent-props": [
 			2,
 			"tab"
 		],
